[package]
name = "dropsafe-dataset-generator-rust-binding"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
dotenvy = "0.15.7"
kiddo = "5.2.2"
osrm-binding = "0.1.6"
rand = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"


[profile.release]
debug = true
