[package]
name = "dropsafe-dataset-generator-rust-binding"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
csv = "1.3.1"
dotenvy = "0.15.7"
kiddo = "5.2.2"
osrm-binding = "0.1.7"
rand = "0.9.2"
rayon = "1.10.0"
arrow2 = { version = "0.18", features = ["io_parquet", "io_parquet_compression"] }

[profile.release]
debug = true
